fix alignments mobile view
-- back missed classes

--- a/site/static/sass/_breakpoints.sass
+++ b/site/static/sass/_breakpoints.sass
@@ -47,7 +47,6 @@
     .benefits
       ul > li
         font-size: 1.4em
-
   .intro
     header.home
       .container
@@ -60,8 +59,6 @@
               margin-bottom: 10px
             a
               display: initial
-
-
     header
       .container
         .search-box
@@ -74,7 +71,6 @@
           input
             font-size: 16px
             padding: 15px 0 16px 25px
-
     #mask
       .container
         .mask-wrapper
@@ -148,7 +144,6 @@
           &:after
             width: 0
 
-
 /* end of collapse menu */
 @media only screen and (min-width: 768px)
   /* override bootstrap default class*/
@@ -193,14 +188,16 @@
 /* end screenshot container */  
 
 /* Mobile first method | Responsive table breakpoint*/
-@media only screen and (min-width: 640px)
+@media only screen and (min-width: 710px)
   .table
     .tr
       &.th
+        .td
+          word-break: normal
+        @include align-items(flex-end)
         font-weight: 700
         border-bottom: 2px solid $color-gray-lighten
       border-bottom: 1px solid $color-gray-lighten
-        
       &.totals
         border-bottom: 0
       @include display-flex(flex)
@@ -289,13 +286,17 @@
     .td
       @include flex-wrap(wrap)
       &:before
+        padding-bottom: 0.3em
+        width: 100%
         padding-right: 0.8em
     .tr
-      font-size: 0.75em
+      font-size: 1em
 
 @media only screen and (max-width: 400px)
 
   body.core
+    .navbar-brand
+      font-size: 90%
     .registration-form
       width: 100%
       margin: 0
